<resources>
    <!-- アプリ情報 -->
    <string name="sample">sample text</string>
    <string name="app_name">こどものひとこと</string>

    <!-- 画像の分類 -->
    <string name="img_icon">icon</string>

    <!-- 共通 -->
    <string name="common_no_tweet">表示できるツイートはもうありませんm(_ _)m</string>
    <string name="common_dummy">ダミーテキスト</string>
    <string name="common_btn_save">保存</string>
    <string name="common_btn_cancel">キャンセル</string>
    <string name="common_btn_close">閉じる</string>

    <!-- ダイアログ Twitterログイン確認 -->
    <string name="dialog_TwitterLoginCheck_title">Twitterへログイン</string>
    <string name="dialog_TwitterLoginCheck_message">
        このアプリを利用するには、Twitterアカウントにログインする必要があります。\n
        OKを押すと、Twitterのログイン画面に遷移します。
    </string>

    <!-- ダイアログ Twitterログアウト確認 -->
    <string name="dialog_TwitterLogout_title">ログアウト</string>
    <string name="dialog_TwitterLogout_message">表示中のユーザーからログアウトします。</string>

    <!-- ダイアログ　アプリについて -->
    <string name="dialog_appExplain_title">アプリ\n「こどものひとこと」について</string>
    <string name="dialog_appExplain_common1">■このアプリは、子供の何気ない一言や会話を投稿し、
        Twitterを利用して手軽に共有し楽しむアプリです。</string>
    <string name="dialog_appExplain_common2">■各タブには、ハッシュタグ「こどものひとこと」が付いた
        ツイートを表示します。</string>
    <string name="dialog_appExplain_common3">■新着、注目、検索タブには、過去1週間以内までの
        ツイートを閲覧できます。</string>
    <string name="dialog_appExplain_common4">■通知タブには、過去30日間までの以下ツイートが表示されます。\n
    ・いいねされた＆タグがついた自分の投稿\n
    ・リツイートされた＆タグがついた自分の投稿\n
    ・送受信DM</string>

    <!-- ポップアップ ユーザーアイコン押下時メニュー -->
    <string name="popup_userMenu3">自分の投稿を表示</string>
    <string name="popup_userMenu2">アカウント画面を開く\n(ブラウザで開きます)</string>
    <string name="popup_userMenu1">ログアウト</string>

    <!-- タブ名 -->
    <string name="tab_text_newArrival">新着</string>
    <string name="tab_text_attention">注目</string>
    <string name="tab_text_search">検索</string>
    <string name="tab_text_favorite">いいね</string>
    <string name="tab_text_noti">通知</string>

    <!-- ヘッダー(hd_) -->
    <string name="hd_title_main">メイン画面</string>
    <string name="hd_title_tweet">こどものひとこと をツイート</string>
    <string name="hd_title_setting">設定</string>

    <string name="hd_icon_text_2">アプリについて</string>
    <string name="hd_icon_text_5">ひとことを\n投稿する</string>

    <!-- 検索タブ(fs_) -->
    <string name="fs_text_1">タグ #こどものひとこと を含む</string>

    <!-- 通知タブ(fno_) -->
    <string name="fno_select_1">いいねされた投稿</string>
    <string name="fno_select_2">リツイートされた投稿</string>
    <string name="fno_select_3">Ⅾ Ⅿ</string>

    <!-- ツイート作成(ct_) -->
    <string name="ct_when">いつ</string>
    <string name="ct_where">どこで</string>
    <string name="ct_how">どういうとき</string>
    <string name="ct_word">こどものひとことや会話</string>

    <string name="ct_inputType_free">フォーム入力</string>
    <string name="ct_inputType_form">自由入力</string>

    <string name="ct_hint1">お買い物に行く途中</string>
    <string name="ct_hint2">歩道で</string>
    <string name="ct_hint3">お散歩中の犬を見て</string>
    <string name="ct_hint4">～～と言っていた</string>
    <string name="ct_hint5">お買い物に行く途中、歩道で、お散歩中の犬を見て、～～と言っていた</string>
    <string name="ct_btn_sent">投稿</string>
    <string name="ct_notes1">※返信はできません</string>
    <string name="ct_notes2">※投稿時、タグ「#こどものひとこと」が自動で付与されます</string>

    <string name="ct_strCount_latter">／000</string>


    <!-- 設定画面(set_) -->
    <string name="set_ct">「こどものひとことをツイート」画面</string>
    <string name="set_ct_defaultType">デフォルトのツイート作成画面</string>
    <string name="set_ct_defaultType_type1">自由入力</string>
    <string name="set_ct_defaultType_type2">フォーム入力</string>

    <string name="set_at">「注目」タブ</string>
    <string name="set_at_criterion">表示ツイートの目安</string>
    <string name="set_at_popular">人気</string>
    <string name="set_at_large">大</string>
    <string name="set_at_medium">中</string>
    <string name="set_at_small">小</string>

    <string name="set_at_explan">注目タブには、一定以上のいいねがされた
    ハッシュタグ #こどものひとこと を含むツイートを表示します。
    </string>
    <string name="set_at_countChoice">人気・・・タグが付いたツイート全体で人気のもの\n小　・・・だいたい10いいね以上\n中　・・・だいたい100いいね以上\n大　・・・だいたい1000いいね以上
    </string>

    <string name="twitter_callback_url">com.example.awordfromachild://callback</string>
</resources>