<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.example.awordfromachild.library.SetHeader
        android:id="@+id/setHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ct_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setHeader">

        <RadioGroup
            android:id="@+id/ct_inputType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ct_free_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ct_inputType_form" />

            <RadioButton
                android:id="@+id/ct_form_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ct_inputType_free" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/ct_formInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/ct_bottomMargin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ct_when"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/ct_when"
                    android:textSize="@dimen/ct_defaultSize" />

                <EditText
                    android:id="@+id/ct_input_when"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:ems="10"
                    android:hint="@string/ct_hint1"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/ct_bottomMargin"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ct_where"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/ct_where"
                    android:textSize="@dimen/ct_defaultSize" />

                <EditText
                    android:id="@+id/ct_input_where"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:ems="10"
                    android:hint="@string/ct_hint2"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/ct_bottomMargin_long"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ct_how"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:text="@string/ct_how"
                    android:textSize="@dimen/ct_defaultSize" />

                <EditText
                    android:id="@+id/ct_input_how"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.65"
                    android:ems="10"
                    android:hint="@string/ct_hint3"
                    android:inputType="textPersonName"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/ct_bottomMargin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ct_word"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ct_word"
                    android:textSize="@dimen/ct_defaultSize" />

                <EditText
                    android:id="@+id/ct_input_word"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/ct_hint4"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="5"
                    android:importantForAutofill="no" />

            </LinearLayout>

            <TextView
                android:id="@+id/ct_count_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/ct_strCount_latter" />

            <TextView
                android:id="@+id/ct_notes_form1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ct_notes1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ct_freeInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ct_main">

            <EditText
                android:id="@+id/ct_input_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/ct_hint5"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:minLines="10"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/ct_count_free"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/ct_strCount_latter" />

            <TextView
                android:id="@+id/ct_notes_free1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ct_notes1" />

            <TextView
                android:id="@+id/ct_notes_free2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ct_notes2" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/ct_btn_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:background="#AA7373"
        android:backgroundTint="#F98A0F"
        android:text="@string/ct_btn_sent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ct_main" />

</androidx.constraintlayout.widget.ConstraintLayout>