<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.example.awordfromachild.library.SetHeader
        android:id="@+id/setHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.example.awordfromachild.library.SetHeader>

    <LinearLayout
        android:id="@+id/set_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/setHeader"
        tools:layout_editor_absoluteX="411dp">

        <LinearLayout
            android:id="@+id/set_ct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/set_margin_default"
            android:layout_marginBottom="@dimen/set_margin_default"
            android:orientation="vertical">

            <TextView
                android:id="@+id/set_ct_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/set_margin_default"
                android:layout_marginBottom="@dimen/set_margin_default"
                android:paddingStart="@dimen/set_margin_default"
                android:paddingEnd="0dp"
                android:text="@string/set_ct"
                android:textColor="@color/dark_orange"
                android:textSize="@dimen/set_stSize_heading" />

            <LinearLayout
                android:id="@+id/set_ct_defaultType_llayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/set_ct_defaultType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/set_margin_default"
                    android:layout_marginTop="@dimen/set_margin_short"
                    android:text="@string/set_ct_defaultType"
                    android:textColor="@color/tweet_default"
                    android:textSize="@dimen/set_stSize_explain" />

                <RadioGroup
                    android:id="@+id/set_ct_defaultType_rgroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/set_margin_default"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/set_ct_defaultType_r1"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/set_ct_defaultType_type1"
                        android:textColor="@color/string_default" />

                    <RadioButton
                        android:id="@+id/set_ct_defaultType_r2"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:text="@string/set_ct_defaultType_type2"
                        android:textColor="@color/string_default" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_at"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/set_at_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/set_margin_default"
                android:layout_marginBottom="@dimen/set_margin_default"
                android:paddingStart="@dimen/set_margin_default"
                android:paddingEnd="0dp"
                android:text="@string/set_at"
                android:textColor="@color/dark_orange"
                android:textSize="@dimen/set_stSize_heading" />

            <TextView
                android:id="@+id/set_at_explan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/set_margin_default"
                android:layout_marginEnd="@dimen/set_margin_default"
                android:layout_marginBottom="@dimen/set_margin_default"
                android:scrollbarThumbHorizontal="@color/light_gray"
                android:text="@string/set_at_explan"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/set_stSize_explain2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/set_at_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/set_margin_default"
                    android:layout_marginEnd="@dimen/set_margin_default"
                    android:layout_marginBottom="@dimen/set_margin_default"
                    android:text="@string/set_at_countChoice" />

                <RadioGroup
                    android:id="@+id/set_at_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/set_at_s"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="小" />

                    <RadioButton
                        android:id="@+id/set_at_m"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="中" />

                    <RadioButton
                        android:id="@+id/set_at_l"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="大" />
                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/set_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/set_margin_long"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/set_main">

        <Button
            android:id="@+id/set_save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_margin_long"
            android:layout_marginEnd="@dimen/set_margin_long"
            android:background="#AEAEAE"
            android:backgroundTint="#E48112"
            android:text="保存"
            android:textSize="@dimen/set_stSize_btn" />

        <Button
            android:id="@+id/set_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/set_margin_long"
            android:layout_marginEnd="@dimen/set_margin_long"
            android:background="#AEAEAE"
            android:backgroundTint="#808080"
            android:text="キャンセル"
            android:textSize="@dimen/set_stSize_btn" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>