<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/tw_linear_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/tw_userIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/img_icon" />

        <LinearLayout
            android:id="@+id/tw_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tw_tweetheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/ic_retweet"
                android:text=""
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/tw_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tw_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:ellipsize="marquee"
                    android:paddingStart="0dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="0dp"
                    android:paddingBottom="5dp"
                    android:singleLine="true"
                    android:text="@string/common_dummy"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tw_userID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/common_dummy"
                    android:textColor="@color/tweet_gray" />

                <TextView
                    android:id="@+id/tw_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="@string/common_dummy"
                    android:textColor="@color/tweet_gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tw_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tw_main"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/sample"
                    android:textColor="@color/tweet_default" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/tw_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tw_reply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    app:drawableStartCompat="@drawable/ic_replay"
                    android:text="@string/common_dummy"
                    android:textColor="@color/tweet_gray"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tw_retweet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    app:drawableStartCompat="@drawable/ic_retweet"
                    android:text="@string/common_dummy"
                    android:textColor="@color/tweet_gray" />

                <TextView
                    android:id="@+id/tw_like"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    app:drawableStartCompat="@drawable/ic_favo"
                    android:text="@string/common_dummy"
                    android:textColor="@color/tweet_gray" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tw_linear_"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/set_margin_default"
        android:layout_marginTop="@dimen/set_margin_long"
        android:layout_marginEnd="@dimen/set_margin_default"
        android:layout_marginBottom="@dimen/set_margin_default"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/tw_noTweet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/common_no_tweet" />
    </LinearLayout>

</LinearLayout>